--- a/Curso_Spring/ejercicios-4-5-6/pom.xml
+++ b/Curso_Spring/ejercicios-4-5-6/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>ejercicios-4-5-6</artifactId>
+	<artifactId>laptops</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ejercicios-4-5-6</name>
-	<description>Ejercicios 4-5-6 del curso</description>
+	<name>laptops</name>
+	<description>Proyecto de laptops</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -48,18 +48,6 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-		<!--<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.9.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.9.2</version>
-		</dependency>-->
-
 
 	</dependencies>
 
