spring.profiles in properties

--- a/Curso_Spring/ejercicios-4-5-6/src/main/resources/application.properties
+++ b/Curso_Spring/ejercicios-4-5-6/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+spring.profiles.active=dev
+message.hola.mundo="Hola mundo desde prod!!"
